Sent for Review

--- a/index.html
+++ b/index.html
@@ -109,32 +109,33 @@
       <h2 class="fw-bold text-success mb-4">Popular Dishes</h2>
       <div class="row g-4">
         <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="images/protein-bowl.jpg" class="card-img-top" alt="Protein Bowl">
+          <div class="card shadow-sm menu-card">
+            <img src="images/pasta.jpg" class="card-img-top" alt="Chicken Protein Bowl">
             <div class="card-body">
-              <h5 class="card-title">Classic Protein Bowl</h5>
-              <p class="card-text">Classic Veggies Packed with paneer, quinoa & Olives.</p>
-              <p class="fw-bold text-success">₹199</p>
+              <h5 class="card-title">Pasta Salad</h5>
+              <p class="card-text">Boiled Pasta with Healthy Veggies for those cravings.</p>
+              <p class="fw-bold text-success">₹110</p>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-md-4">
+          <div class="card shadow-sm menu-card">
+            <img src="images/dry.png" class="card-img-top" alt="Chicken Protein Wrap">
+            <div class="card-body">
+              <h5 class="card-title">Royal Dry Fruit</h5>
+              <p class="card-text">Mixed Dry Fruit Milkshake with Smooth Texture.</p>
+              <p class="fw-bold text-success">₹120</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="images/wrap.jpg" class="card-img-top" alt="Vegan Protein Wrap">
+          <div class="card shadow-sm menu-card">
+            <img src="images/makhana.jpg" class="card-img-top" alt="Berry Smoothie">
             <div class="card-body">
-              <h5 class="card-title">Vegan Protein Wrap</h5>
-              <p class="card-text">Wholesome wrap with beans, Tofu and Fresh Veggies.</p>
-              <p class="fw-bold text-success">₹149</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="images/sbowl.png" height="275" class="card-img-top" alt="Smoothie Bowl">
-            <div class="card-body">
-              <h5 class="card-title">Berry Smoothie Bowl</h5>
-              <p class="card-text">Fresh fruits blended with protein goodness.</p>
-              <p class="fw-bold text-success">₹129</p>
+              <h5 class="card-title">Makhana Bhel</h5>
+              <p class="card-text">A mix of Makhana, Veggies and Lime.</p>
+              <p class="fw-bold text-success">₹90</p>
             </div>
           </div>
         </div>
