--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         <p class="lead">Order fresh, protein-packed meals from GreenGains and fuel your body the healthy way.</p>
 <a href="#popular-dishes" class="btn btn-success btn-lg mt-3">Explore Menu</a>
         <!-- Playstore & Appstore -->
-        <div class="mt-4">
+                 <h1 class="leadWhite mt-4">Coming Soon : </h1>
+
+        <div class="mt-0">
           <a href="#"><img src="images/playstore.png" alt="Playstore" style="height:50px;"></a>
           <a href="#"><img src="images/appstore.png" alt="App Store" style="height:65px;"></a>
         </div>
@@ -72,7 +74,7 @@
     <h2 class="fw-bold text-success mb-4">About Us</h2>
     <p class="mb-4">
       GreenGains is your ultimate destination for fresh, wholesome, and protein-packed meals designed to fuel an active and healthy lifestyle. We are committed to serving nutrient-rich bowls, wraps, smoothies, and snacks crafted from the finest fresh ingredients, sourced locally wherever possible. Each meal is carefully prepared with attention to taste, quality, and nutrition, ensuring a balanced diet without compromising on flavor.  
-      Operating in Mumbai and surrounding areas, GreenGains provides a convenient pickup experience at our stall, where you can collect your orders quickly and enjoy healthy meals on-the-go. Whether you are a fitness enthusiast, a busy professional, or someone looking for a quick nutritious bite, GreenGains is here to power your day with clean, delicious, and energizing food. Our mission is simple: make healthy eating easy, accessible, and enjoyable for everyone.
+      Operating in Mumbai and surrounding areas, GreenGains provides a convenient pickup experience at our stall, where you can collect your orders quickly and enjoy healthy meals on-the-go. Whether you are a fitness enthusiast, a busy professional, or someone looking for a quick nutritious bite, GreenGains is here to power your day with clean, delicious, and energizing food. Our mission is simple: make healthy eating Accessible,Affordable and Enjoyable for everyone.
     </p>
     <a href="#contact" class="btn btn-success btn-lg mt-3">Visit Our Stall</a>
   </div>
@@ -200,7 +202,7 @@
   <div class="container">
     <h2 class="fw-bold">Ready to Try GreenGains?</h2>
     <p class="mb-4">Visit our stall today or order online for quick healthy meal.</p>
-    <a href="mailto:support@greengains.in" class="btn btn-light btn-lg">
+    <a href="mailto:greengainsessen@gmail.com" class="btn btn-light btn-lg">
       Contact Us
     </a>
   </div>
@@ -240,9 +242,9 @@
     <a href="https://www.instagram.com/greengainsindia?igsh=MWduNjdra20ycGJkYg==" target="_blank" class="text-light fs-3">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://facebook.com/greengains" target="_blank" class="text-light fs-3">
+    <!-- <a href="https://facebook.com/greengains" target="_blank" class="text-light fs-3">
       <i class="fab fa-facebook"></i>
-    </a>
+    </a> -->
     
   </div>
   
@@ -259,7 +261,7 @@
       <div class="col-md-4 mb-3">
         <i class="fas fa-envelope fa-2x mb-2 text-success"></i>
         <p class="fw-bold mb-0">Send us mails</p>
-        <small>support@greengains.in</small>
+        <small>greengainsessen@gmail.com</small>
       </div>
       <div class="col-md-4 mb-3">
         <i class="fas fa-phone fa-2x mb-2 text-success"></i>
