--- a/privacy.html
+++ b/privacy.html
@@ -91,7 +91,7 @@
       <p>You can request deletion of your account and associated data anytime through:</p>
       <ul>
         <li><strong>In-App:</strong> Profile → Delete Account → Follow prompts to confirm.</li>
-        <li><strong>Email:</strong> Send a request from your registered email to <a href="mailto:support@greengains.in">support@greengains.in</a>.</li>
+        <li><strong>Email:</strong> Send a request from your registered email to <a href="mailto:greengainsessen@gmail.com">greengainsessen@gmail.com</a>.</li>
       </ul>
       <p>We will erase your personal data from active systems, subject to any legal or regulatory retention requirements.</p>
 
@@ -102,7 +102,7 @@
         <li><strong>Right to Erasure:</strong> Request deletion of your data where legally allowed.</li>
         <li><strong>Right to Withdraw Consent:</strong> Withdraw consent for marketing or other consent-based processing at any time.</li>
       </ul>
-      <p>Contact our Privacy Compliance Officer at <a href="mailto:support@greengains.in">support@greengains.in</a> to exercise your rights.</p>
+      <p>Contact our Privacy Compliance Officer at <a href="mailto:greengainsessen@gmail.com">greengainsessen@gmail.com</a> to exercise your rights.</p>
 
       <h2 class="fw-bold text-success mt-4">7. Children's Privacy</h2>
       <p>Our Services are not directed to children under 13 years. We do not knowingly collect personal information from children under 13. By using the app, you confirm you are at least the age of majority in your jurisdiction.</p>
@@ -114,7 +114,7 @@
       <p>We may update this policy from time to time. Major changes will be communicated via app notification or email. Continued use of the app after changes implies acceptance of the updated policy.</p>
 
       <h2 class="fw-bold text-success mt-4">10. Contact Us</h2>
-      <p>Email: <a href="mailto:support@greengains.in">support@greengains.in</a></p>
+      <p>Email: <a href="mailto:greengainsessen@gmail.com">greengainsessen@gmail.com</a></p>
       <p>Mail: GreenGains, Mumbai, Maharashtra, India</p>
     </div>
   </div>
