--- a/refund.html
+++ b/refund.html
@@ -89,7 +89,7 @@
 
       <h3>2.2 How to Request a Refund</h3>
       <p>Contact our support team immediately with your order details:</p>
-      <p>Email: support@GreenGains.in</p>
+      <p>Email: greengainsessen@gmail.com</p>
       <p>Phone: +91 97487 39008</p>
       <p>Our team will review your request and respond within 24 hours. Approved refunds will be processed within 5-7 business days back to the original payment method.</p>
 
@@ -113,7 +113,7 @@
 
       <h2>7. Contact & Support</h2>
       <p>For questions, disputes, or refund requests, please contact:</p>
-      <p>Email: support@GreenGains.in</p>
+      <p>Email: greengainsessen@gmail.com</p>
       <p>Phone: +91 97487 39008</p>
 
       <h2>8. Other Terms</h2>
