--- a/terms.html
+++ b/terms.html
@@ -164,7 +164,7 @@
       <p>It is your responsibility to check for changes periodically. Continued use after changes constitutes acceptance.</p>
 
       <h2>SECTION 20 – CONTACT INFORMATION</h2>
-      <p>Questions about these Terms of Service should be sent to us at support@GreenGains.in.</p>
+      <p>Questions about these Terms of Service should be sent to us at greengainsessen@gmail.com.</p>
       <p>Simple. Fast. Satisfying. No Cook. Just Click.</p>
       <p>Effective date: July 2025</p>
 
