--- a/shipping.html
+++ b/shipping.html
@@ -107,7 +107,7 @@
       <h2>5. Customer Support & Issue Resolution</h2>
       <p>For any questions, missed pickup, or order issues, please contact us at:</p>
       <p>Phone: +91 95800 76068</p>
-      <p>Email: support@greengains.in</p>
+      <p>Email: greengainsessen@gmail.com</p>
       <p>Our team is available to assist promptly and resolve most issues within 1 working day.</p>
 
       <h2>6. Modifications to Policy</h2>
