--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <p class="lead">Order fresh, protein-packed meals from GreenGains and fuel your body the healthy way.</p>
 <a href="#popular-dishes" class="btn btn-success btn-lg mt-3">Explore Menu</a>
         <!-- Playstore & Appstore -->
-                 <h1 class="leadWhite mt-4">Coming Soon : </h1>
+                 <h1 class="leadWhite mt-4">Coming Soon on Playstore and AppStore: </h1>
 
         <div class="mt-0">
-          <a href="#"><img src="images/playstore.png" alt="Playstore" style="height:50px;"></a>
-          <a href="#"><img src="images/appstore.png" alt="App Store" style="height:65px;"></a>
+          <a><img src="images/play.png" alt="Playstore" style="height:50px;"></a>
+          <a><img src="images/appS.png" alt="App Store" style="height:65px;"></a>
         </div>
       </div>
 
@@ -282,10 +282,7 @@
     <!-- Bottom -->
     <div class="text-center">
       <p class="mb-2">&copy; 2025 GreenGains. All Rights Reserved.</p>
-      <div>
-        <a href="#"><img src="images/appstore.png" alt="App Store" style="height:65px;" class="me-2"></a>
-        <a href="#"><img src="images/playstore.png" alt="Play Store" style="height:50px;"></a>
-      </div>
+      
     </div>
   </div>
 </footer>
